chore: use tempdir property rather than /tmp hardcode